[project]
name = "voice-clone-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "chatterbox-tts>=0.1.7",
    "ollama>=0.6.2",
    "peft>=0.19.1",
    "resemble-perth",
    "torch==2.6.0",
    "torchaudio==2.6.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
resemble-perth = { git = "https://github.com/eschmidbauer/Perth.git" }
