[project]
name = "voice-clone-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "faster-whisper>=1.2.1",
    "ollama>=0.6.2",
    "peft>=0.19.1",
    "playsound3>=3.3.1",
    "pyaudio>=0.2.14; sys_platform == 'win32'",
    "requests>=2.34.2",
    "resemble-perth",
    "speechrecognition>=3.16.1",
    "uuid>=1.30",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
resemble-perth = { git = "https://github.com/eschmidbauer/Perth.git" }

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
]
